--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"start": "wp-scripts start"
 	},
 	"dependencies": {
+		"@wordpress/blob": "^3.12.0",
 		"@wordpress/block-editor": "^9.4.0",
 		"@wordpress/blocks": "^11.11.0",
 		"@wordpress/components": "^19.14.0",
