--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
 		"@wordpress/block-editor": "^9.4.0",
 		"@wordpress/blocks": "^11.11.0",
 		"@wordpress/components": "^19.14.0",
+		"@wordpress/compose": "^5.10.0",
+		"@wordpress/data": "^6.12.0",
+		"@wordpress/element": "^4.10.0",
 		"@wordpress/i18n": "^4.12.0"
 	},
 	"devDependencies": {
